// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoggedInLinks /> Check how renders should render version for user with status active 1`] = `
<DocumentFragment>
  <nav
    class="sc-jSgupP TeqAh"
  >
    <a
      class="sc-dlfnbm laaXGn"
      data-testid="CartLink"
    >
      <div
        class="sc-bdfBwQ gtikZV"
        color=""
      >
        <svg>
          cart.svg
        </svg>
      </div>
    </a>
    <div
      class="sc-gKsewC jVIvkB"
      data-testid="LoggedInLinks-user-box"
      id="user"
    >
      <span
        class="sc-eCssSg eQzqiy"
        color=""
        display="inline-block"
        overflow="hidden"
        size="3"
        spacing="0px"
        transform=""
      >
        username
      </span>
      <div
        class="sc-bdfBwQ kWqztf"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
      <div />
    </div>
  </nav>
</DocumentFragment>
`;

exports[`<LoggedInLinks /> Check how renders should render version for user with status pending 1`] = `
<DocumentFragment>
  <nav
    class="sc-jSgupP TeqAh"
  >
    <a
      data-testid="LoggedInLinks-my-account-link"
    >
      <div
        class="sc-gKsewC jVIvkB"
        id="user"
      >
        <span
          class="sc-eCssSg eQzqiy"
          color=""
          display="inline-block"
          overflow="hidden"
          size="3"
          spacing="0px"
          transform=""
        >
          username
        </span>
        <div
          class="sc-bdfBwQ krVsOR"
          color=""
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </a>
  </nav>
</DocumentFragment>
`;
